<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jokes"
        android:textStyle="bold"
        android:fontFamily="@font/italic"
        android:textSize="40sp"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:id="@+id/cardview"
        android:src="@drawable/card_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        android:contentDescription="@string/cardview" />


    <LinearLayout
        android:id="@+id/LLsetup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup1"
            android:textStyle="bold"
            android:fontFamily="@font/italic"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup"
            android:fontFamily="@font/italic"
            android:textSize="25sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLpunch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="370dp"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/punch"
            android:textStyle="bold"
            android:fontFamily="@font/italic"
            android:textSize="25sp"/>


        <TextView
            android:id="@+id/punchline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punchline"
            android:textSize="25sp"
            android:textStyle="italic"/>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="300dp"
        android:src="@drawable/share"
        android:onClick="shareButton"
        app:backgroundTint="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/share" />


    <LinearLayout
        android:id="@+id/LLprevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgprevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left"
            android:contentDescription="@string/imgprevious" />

        <TextView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/previous"
            android:textStyle="italic"
            android:onClick="onprevious"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLnext"
        android:layout_width="66dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UseCompoundDrawables"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:onClick="onnext"
            android:text="@string/next"
            android:textStyle="italic"
            android:gravity="center_vertical"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/imgnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:src="@drawable/right"
            android:contentDescription="@string/imgnext" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>